# labrys

./: .gitignore  .merlin  .ocp-indent  .travis-ci.sh  .travis-opam-init.sh  .travis.yml  HACKING  LICENSE  Makefile  README.md  TODO  _oasis  _tags  cervoise.install  cervoise.opam  config.ml  dune-project  labrys.opam  myocamlbuild.ml  opam  setup.ml
doc/: draft-03-2015.odt  semantics-after.ott  semantics-before.ott  semantics.ott  system-f-omega.ott  system-f.ott  system-fc.ott  system-fcw.ott  system-fw-with-effects.ott  system-fw.ott
examples/: Bug.sfw  CombS.sfw  EarlyEx.sfw  ExOne.sfw  Exn.sfw  ExnVar.sfw  Fact.sfw  GrosGrosBug.sfw  Hello.sfw  LetRecIn.sfw  Lol.sfw  Multi.sfw  Multi.sfwi  MultiTypes.sfw  Nat.sfw  Nat.sfwi  NativeFact.sfw  PolyFact.sfw  Presentation.sfw  Print.sfw  Rec.sfw  SystemF.sfw  SystemFOmega.sfw  TailFact.sfw  Test.sfw  TestImports.sfw  TyClass.sfw  Variants.sfw  YetAnotherBug.sfw  bug.sfw  comb-S.sfw  dune  examples.t  exn.sfw  fact.sfw  let-rec-in.sfw  multi-types.sfw  multi.sfw  print.sfw  rec.sfw  (+6 more)
examples/Test/: Lol.sfw  Lol.sfwi  Multi.sfwi
src/: .merlin  LLVM.ml  LLVM.mli  ast.ml  backend.ml  backend.mli  backendExpr.ml  backendExpr.mli  backendName.ml  backendName.mli  backendType.ml  backendType.mli  backendValue.ml  backendValue.mli  beta.ml  beta.mli  buildSystem.ml  buildSystem.mli  builtins.ml  builtins.mli  class.ml  class.mli  compiler.ml  compiler.mli  config.ml.ab  config.ml.in  config.mli  dune  effects.ml  effects.mli  envMap.ml  envMap.mli  envSet.ml  envSet.mli  err.ml  err.mli  error.ml  error.mli  gamma.ml  gamma.mli  (+56 more)
src/backend/: LLVM.ml  LLVM.mli  backend.ml  backend.mli  dune  runtime.c
src/common/: dune  err.ml  err.mli  ident.ml  ident.mli  module.ml  module.mli  utils.ml
src/config/: create.ml  dune
src/desugaring/: DesugaredTreePrinter.ml  DesugaredTreePrinter.mli  builtins.ml  desugar.ml  desugar.mli  desugaredTree.mli  dune  imports.ml  imports.mli  unsugar.ml  unsugar.mli  unsugaredTree.mli
src/flatten/: FlattenTreePrinter.ml  FlattenTreePrinter.mli  dune  flatten.ml  flatten.mli  flattenTree.mli
src/interface/: interface.ml  interface.mli  interfaceTree.mli
src/lambda/: LambdaTreePrinter.ml  LambdaTreePrinter.mli  beta.ml  beta.mli  dune  lIdent.ml  lIdent.mli  lambda.ml  lambda.mli  lambdaTree.mli  untypedTree.mli
src/optimization/: OptimizedTreePrinter.ml  OptimizedTreePrinter.mli  dune  optimize.ml  optimize.mli  optimizedTree.mli
src/parsing/: ParseTreePrinter.ml  ParseTreePrinter.mli  dune  ident.ml  lexer.mli  lexer.mll  location.mli  parseTree.mli  parser.mly  parserHandler.ml  parserHandler.mli  utils.mli
src/pre-typing/: PretypedTreePrinter.ml  PretypedTreePrinter.mli  class.ml  class.mli  dune  effects.ml  effects.mli  env.ml  env.mli  gamma.ml  gamma.mli  kinds.ml  kinds.mli  patternMatrix.ml  patternMatrix.mli  pretypedTree.mli  pretyper.ml  pretyper.mli  privateTypes.ml  privateTypes.mli  types.ml  types.mli
src/typing/: UntypedTree.mli  UntypedTreePrinter.ml  UntypedTreePrinter.mli  dune  env.ml  env.mli  envMap.ml  envMap.mli  lIdent.mli  nType.ml  nType.mli  pattern.ml  pattern.mli  type.ml  type.mli  typeChecker.ml  typeChecker.mli  typedEnv.mli
stdlib/: Nat.bc  Nat.csfw  Nat.sfw  Nat.sfwi  Prelude.bc  Prelude.csfw  Prelude.sfw  Prelude.sfwi  dune
tests/: .merlin  basic.t  examples.sh  lambda.sfw  tests.ml
tests/basic/: basic.t  dune
tests/errors/: InvalidRec.sfw  dune  errors.t
tests/examples/: examples.t
tests/old-examples/: Bug.sfw  ExOne.sfw  Exn.sfw  ExnVar.sfw  Fact.sfw  GrosGrosBug.sfw  LetRecIn.sfw  Lol.sfw  Multi.sfw  MultiTypes.sfw  Nat.sfw  Nat.sfwi  NativeFact.sfw  Presentation.sfw  Print.sfw  Rec.sfw  SystemF.sfw  SystemFOmega.sfw  TailFact.sfw  Test.sfw  TestImports.sfw  TyClass.sfw  Variants.sfw  YetAnotherBug.sfw  dune  old-examples.t
tests/old-examples/Test/: Multi.sfw
