opam-version: "1.2"
name: "cervoise"
version: "0+dev"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/cervoise"
dev-repo: "https://github.com/kit-ty-kate/cervoise.git"
bug-reports: "https://github.com/kit-ty-kate/cervoise/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "exec" "--"
   "cervoise" "build-module" "--no-prelude" "--build-dir" "." "--src-dir" "stdlib" "Prelude"]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "menhir"
  "base-unix"
  "cmdliner"
  "pprint"
  "re"
  "msgpack"
  "uutf" {>= "1.0.0"}
  "llvm" {>= "3.8"}
  "containers" {>= "2.0"}
  "craml" {test}
]
tags: [
  "compiler"
  "System F"
  "System Fω"
  "llvm"
  "type-system"
  "language"
]
available: [ocaml-version >= "4.04"]
