opam-version: "2.0"
version: "0.1.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/labrys"
dev-repo: "git+https://github.com/kit-ty-kate/labrys.git"
bug-reports: "https://github.com/kit-ty-kate/labrys/issues"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "2.0"}
  "menhir"
  "base-unix"
  "cmdliner"
  "pprint"
  "re"
  "msgpack"
  "uutf" {>= "1.0.0"}
  "llvm" {>= "3.8"}
  "containers" {>= "3.0"}
  "containers-data" {>= "3.0"}
  "llvm" {with-test & = "11.0.0"}
  "craml" {with-test}
]
available: arch = "x86_64" | arch = "arm32" | arch = "arm64" # boehmGC segfaults on any other platforms
depexts: [
  ["libgc-dev"] {os-family = "debian"}
  ["gc-devel"] {os-distribution = "centos"}
  ["gc-devel"] {os-distribution = "fedora"}
  ["gc-devel"] {os-family = "suse"}
  ["gc"] {os-distribution = "arch"}
  ["gc-dev"] {os-distribution = "alpine"}
  ["boehmgc"] {os-distribution = "macports" & os = "macos"}
  ["bdw-gc"] {os-distribution = "homebrew" & os = "macos"}
  ["boehm-gc"] {os-distribution = "gentoo"}
  ["devel/boehm-gc"] {os = "netbsd"}
  ["devel/boehm-gc"] {os = "openbsd"}
  ["devel/boehm-gc"] {os = "freebsd"}
]
tags: [
  "compiler"
  "System F"
  "System Fω"
  "llvm"
  "type-system"
  "language"
]
synopsis: "A toy language based on LLVM that implements the System Fω type-system"
