opam-version: "2.0"
synopsis: "A toy language based on LLVM that implements the System Fω type-system"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/labrys"
dev-repo: "git://github.com/kit-ty-kate/labrys.git"
bug-reports: "https://github.com/kit-ty-kate/labrys/issues"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "2.8"}
  "dune-site" {>= "2.8"}
  "menhir"
  "base-unix"
  "cmdliner"
  "pprint"
  "re" {>= "1.9.0"}
  "msgpack"
  "uutf" {>= "1.0.0"}
  "llvm" {>= "3.8"}
  "llvm" {with-test & = "11.0.0" & !(os-distribution = "debian" & os-version < "11") & !(os-distribution = "centos" & os-version < "9")}
  "llvm" {with-test & = "7.0.0" & os-distribution = "debian" & os-version < "11"}
  "llvm" {with-test & = "12.0.1" & os-distribution = "centos" & os-version < "9"}
  "containers" {>= "3.0"}
  "containers-data" {>= "3.0"}
]
available: arch != "s390x" # TODO: Look into why the tests segfault
tags: [
  "compiler"
  "System F"
  "System Fω"
  "llvm"
  "type-system"
  "language"
]
