(copy_files# backend/*)
(copy_files# desugaring/*)
(copy_files# flatten/*)
(copy_files# lambda/*)
(copy_files# optimization/*)
(copy_files# pre-typing/*)
(copy_files# typing/*)

(executable
  (name main)
  (public_name labrys)
  (flags (:standard -safe-string -warn-error -A -w A-44-33-4 -open Containers))
  (modules_without_implementation
     options
     desugaredTree
     flattenTree
     lambdaTree
     optimizedTree
     pretypedTree
     typedEnv
     untypedTree)
  (libraries
     labrys_parsing
     unix
     cmdliner
     pprint
     re
     msgpack
     uutf
     llvm
     llvm.passmgr_builder
     llvm.target
     llvm.bitwriter
     llvm.bitreader
     llvm.all_backends
     llvm.linker
     llvm.scalar_opts
     containers
     containers.unix
     containers-data))

(rule
  (targets config.ml)
  (deps ../config.ml)
  (action (with-stdout-to %{targets} (run ocaml %{deps} %{version:labrys}))))
