(library
 (name labrys_backend)
 (wrapped false)
 (libraries
   labrys_optimization
   containers
   llvm
   llvm.passmgr_builder
   llvm.target
   llvm.bitwriter
   llvm.bitreader
   llvm.all_backends
   llvm.linker
   llvm.scalar_opts))

(rule
 (targets runtime.ml)
 (deps runtime.c)
 (action
  (with-stout-to %{targets}
   (progn
    (echo "let content = {|")
    (cat runtime.c)
    (echo "|}")))))
