(library
 (name labrys_backend)
 (wrapped false)
 (libraries
   labrys_optimization
   containers
   llvm
   llvm.passmgr_builder
   llvm.target
   llvm.bitwriter
   llvm.bitreader
   llvm.all_backends
   llvm.linker
   llvm.scalar_opts))

(rule
 (targets runtime.ml)
 (deps runtime.bc)
 (action
  (with-stdout-to %{targets}
   (progn
    (echo "let content = {runtime|")
    (cat runtime.bc)
    (echo "|runtime}")))))

(rule
 (targets runtime.bc)
 (deps runtime.c)
 (action (run clang -emit-llvm -c %{deps})))
