(alias
  (name runtest)
  (deps
    (:test errors.t)
    (glob_files *.sfw)
    (glob_files *.sfwi)
    %{project_root}/stdlib/Prelude.bc)
  (action
    (progn
      (setenv CERVOISE %{exe:../../src/main.exe}
        (setenv CERVOISE_LIBDIR %{project_root}/stdlib
          (run craml %{test})))
      (diff? %{test} %{test}.corrected))))
