(alias
  (name runtest)
  (deps
    (:test old-examples.t)
    (glob_files *.sfw)
    (glob_files *.sfwi)
    (glob_files Test/*.sfw)
    (glob_files Test/*.sfwi)
    %{project_root}/stdlib/Prelude.bc)
  (action
    (progn
      (setenv CERVOISE %{exe:../../src/main.exe}
        (setenv CERVOISE_LIBDIR %{project_root}/stdlib
          (run craml %{test})))
      (diff? %{test} %{test}.corrected))))
